# RAGme

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
api/: app.py
docs/: api-spec.yaml  architecture.md
embedding/: embedding_qstoring.py
rag_logic/: embedding and quering.py
services/api/: Dockerfile  main.py  rag_pipeline.py  requirements.txt
services/frontend/: Dockerfile  app.py
services/ingestion/: Dockerfile  main.py  requirements.txt
services/ingestion/tests/: test_ingestion.py
shared/: config.py  embeddings.py  storage.py
