[project]
name = "ragme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "ollama>=0.6.1",
    "pypdf>=6.4.1",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]
